--- a/src/component/newlist.css
+++ b/src/component/newlist.css
@@ -8,21 +8,17 @@
     margin-bottom: 3vw;
     margin-left: 0.5vw;
     margin-right: 0.5vw;
-    border-right: 0.7vw solid;
-    border-image: linear-gradient(to bottom, #bf5c4040 20%, #f0f0f0 20%) 40;
+
 }
 
 .image img {
     width: 100%;
     height: 16vw; 
-    /* border-right: 0.5vw solid #f0f0f0; */
+    border-right: 0.5vw solid #f0f0f0;
     border-left: 0.7vw solid #bf5c4040;
     border-top: 0.7vw solid #bf5c4040;   
 }
-.image:hover{
-    border-image: linear-gradient(to bottom, #bf5c40 20%, #f0f0f0 20%) 40;
 
-}
 .image img:hover {
     border-left: 0.7vw solid #bf5c40;
     border-top: 0.7vw solid #bf5c40;
@@ -123,7 +119,7 @@
     color: #bf5c40;
     position: absolute;
     top: 11.5vw;
-    right: 0vw;
+    right: 1vw;
     font-size: 2vw;
 }
 
@@ -137,12 +133,12 @@
     
     .image {
         margin-bottom: 5vw;
-        border-right: 1vw solid;
+       
     }
     .image img {
         width: 100%;
         height: 28vw;
-        /* border-right: 1vw solid #f0f0f0; */
+        border-right: 1vw solid #f0f0f0;
         border-left: 1vw solid #bf5c4040;
         border-top: 1vw solid #bf5c4040;
         
@@ -185,7 +181,7 @@
     }
     .linkto{
         top: 18vw;
-        right: 0vw;
+        right: 1vw;
         font-size: 3vw;
     }
 }
@@ -198,12 +194,11 @@
     
     .image {
         margin-bottom: 5vw;
-        border-right: 1.5vw solid;
     }
     .image img {
         width: 100%;
         height: 50vw;
-        /* border-right: 1.5vw solid #f0f0f0; */
+        border-right: 1.5vw solid #f0f0f0;
         border-left: 1.5vw solid #bf5c4040;
         border-top: 1.5vw solid #bf5c4040;
         
